--- a/src/scss/components/_feature.scss
+++ b/src/scss/components/_feature.scss
@@ -9,14 +9,14 @@
   text-align: center;
   .feature-image {
     flex: 0 0 auto;
-    width: 80px;
+    width: auto;
     height: 80px;
     display: flex;
     margin-bottom: 20px;
     text-align: center;
   }
   img {
-    width: 100%;
+    width: 160px;
     height: auto;
   }
   .feature-title {
