--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -70,6 +70,7 @@
 @import 'pages/testimonials/testimonial';
 @import 'pages/services/page-services';
 @import 'pages/services/page-service';
+@import 'components/slides';
 
 // Display breakpoints for DEV
 // body:after {
